--- a/index.css
+++ b/index.css
@@ -21,11 +21,32 @@
     user-select: none;
 }
 
+.doSelect {
+    user-select: auto;
+}
+
 .fab:hover {
     box-shadow: 0 0 0 0 #666;
     transform: scale(1.05);
 }
 
+#menu {
+    position: absolute;
+    width: 100%;
+}
+
 #root {
-    
+    position: absolute;
+    z-index: 1;
+    top: 72.5;
+    height: calc(100% - 72.5px);
+    width: 100%;
+}
+
+#root * {
+    z-index: 1;
+}
+
+#floating, #floating * {
+    z-index: 2;
 }
